small download page fix

--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                     <p>Click below to download Latite's Official Launcher!</p>
                     <a href="https://github.com/Imrglop/Latite-Releases/raw/main/injector/Injector.exe" target="_blank"><button class="latite-dl">Download</button></a>
                 </div>
-                <div class="line"></div>
+                <!-- <div class="line"></div> -->
                 <div class="line"></div>
                 <div class="dropdown-title">
                     <button class="dropdown-dl-button">
