--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a onclick="toggleBeta()">Beta</a>
                 <a onclick="toggleLicense()">License</a>
                 <a href="https://discord.gg/GpV3w5tyBs" target="_blank">Discord</a>
-                <a href="https://github.com/Plextora/LatiteInjector" target="_blank">Github</a>
+                <a href="https://github.com/Imrglop/Latite-Releases" target="_blank">Github</a>
             </ul>
         </nav>
     </div>
@@ -91,7 +91,7 @@
         </div>
         <div class="buttonbox">
             <button class="button" onclick="toggleAlertDownlaodButton(); toggleDownload();">
-                Download&nbsp;V1&nbsp;<i class="fa-solid fa-download"></i>
+                Download&nbsp;V2&nbsp;<i class="fa-solid fa-download"></i>
             </button>
             <form action="https://discord.gg/GpV3w5tyBs" target="_blank">
                 <button class="button-discord" href='https://discord.gg/GpV3w5tyBs' target="_blank">Discord&nbsp;<i
@@ -204,7 +204,7 @@
             <div class="l-desc-container" data-aos="fade" data-aos-easing="ease-in-out" id="trigger4">
                 <p class="l-section-header">Latite Client <span class="l-text-gradient">Launcher</span>
                 </p>
-                <p class="l-desc">Launch Latite Client with ease using our clean Launcher!</p>
+                <p class="l-desc">Launch Latite Client with ease using our new and clean Launcher, which is coming soon!</p>
             </div>
             <div class="l-gr" data-aos="fade-down" data-aos-easing="ease-out" data-aos-delay="200"
                 data-aos-anchor="#trigger4">
@@ -895,7 +895,7 @@
                                 Use this to launch Latite. The injector might be flagged as a virus,
                                 so make sure you exclude the injector from your antivirus if needed
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <a class="links" target="_blank"
                                     href="https://github.com/Imrglop/Latite-Releases/raw/deb4542e2f33c072594373e6c48aeb5d5f0ad08e/injector/Injector.exe">
                                     <strong>Legacy Latite Injector</strong>&nbsp;<i
@@ -904,7 +904,7 @@
                                 <br>
                                 The legacy Latite Injector. If you encounter any issues with the main injector (above), use
                                 this.
-                            </li>
+                            </li> -->
                             <li>
                                 <a class="links" target="_blank"
                                     href="https://latite-client.is-from.space/r/Latite_Minimal.exe">
@@ -926,7 +926,7 @@
                             <li>
 
                                 <a class="links" target="_blank"
-                                    href="jiayi://addmod/https://github.com/Imrglop/Latite-Releases/releases/download/v1.6.0/Latite.1.20.60.dll">
+                                    href="jiayi://addmod/https://github.com/Imrglop/Latite-Releases/releases/download/v2.0.0/Latite.dll">
                                     <strong>Jiayi Launcher Import</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                                 <br>
