--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
         </div>
     </header>
 
+    <div class="v2-notification">
+        <img class="ann" src="./sources/announcement.png">
+        <div class="textandclose">
+            <div class="notification-text">
+                <h2>Latite Client V2 Release</h2>
+                <p>Latite Client V2 has been released. It features a new UI, improved UX, new modules and a plugin system! Go download it now!</p>
+            </div>
+            <img class="close-noti" src="./sources/close.png" onclick="closeNotification()">
+        </div>
+    </div>
 
     <main class="content">
 
@@ -931,7 +941,7 @@
                                 </a>
                                 <br>
 
-                                <p>Click below to import the latest version of Latite Client into <a href="https://github.com/JiayiSoftware/JiayiLauncher" target="_blank" class="links">Jiayi Launcher&nbsp;</a><i class="fa-solid fa-arrow-up-right-from-square"></i></p>
+                                <p>Click below to import the latest version of Latite Client (1.20.81) into <a href="https://github.com/JiayiSoftware/JiayiLauncher" target="_blank" class="links">Jiayi Launcher&nbsp;</a><i class="fa-solid fa-arrow-up-right-from-square"></i></p>
                             </li>
                         </ul>
                     </div>
