upgraded notification (mobile support)

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <a href="#faq">FAQ</a>
                 <a onclick="toggleBeta()">Beta</a>
                 <a onclick="toggleLicense()">License</a>
+                <a href="https://github.com/LatiteScripting" target="_blank">Plugins</a>
                 <a href="https://discord.gg/GpV3w5tyBs" target="_blank">Discord</a>
                 <a href="https://github.com/Imrglop/Latite-Releases" target="_blank">Github</a>
             </ul>
