moved atlas promotion into mobile faq. added announcement icon animation

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                 </div>
 
                 <div class="question">
-                    <button class="faqbutton">
+                    <button class="faqbutton atlasfaq">
                         <span><strong>13. </strong>Why Latite Client doesn't support mobile devices</span>
                         <i class="fas fa-chevron-down d-arrow"></i>
                     </button>
@@ -597,7 +597,22 @@
                                 absolute hell to manage.
                             </li>
                         </ul>
-                        Update: Atlas Client, made by the same developer is in the works for Android Devices.
+                        <strong>Update: Atlas Client, made by the same developer is in the works for Android Devices.</strong>
+                        <br><br>
+                        <div class="atlas-container" id="atlas">
+                            <div class="atlasbrand">
+                                <img src="sources/atlas.webp" class="atlas-logo">
+                                <div class="brandtext">
+                                    <h1>Atlas Client</h1>
+                                    <h3>Legitimate Client for MCPE</h3>
+                                </div>
+                            </div>
+                            <a href="https://discord.gg/pRq73GPVGb" class="atlaslink">
+                                <button class="atlasdownload">
+                                    DOWNLOAD&nbsp;FOR&nbsp;<i class="fa-brands fa-android"></i>
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -808,21 +823,6 @@
                 </div>
 
             </div>
-        </section>
-
-        <section class="atlas-container" id="atlas">
-            <div class="atlasbrand">
-                <img src="sources/atlas.webp" class="atlas-logo">
-                <div class="brandtext">
-                    <h1>Atlas Client</h1>
-                    <h3>Legitimate Client for MCPE</h3>
-                </div>
-            </div>
-            <a href="https://discord.gg/pRq73GPVGb" class="atlaslink">
-                <button class="atlasdownload">
-                    DOWNLOAD&nbsp;FOR&nbsp;<i class="fa-brands fa-android"></i>
-                </button>
-            </a>
         </section>
 
     </main>
