--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
                             <li>
 
                                 <a class="links" target="_blank"
-                                    href="jiayi://addmod/https://github.com/Imrglop/Latite-Releases/releases/download/v2.0.0/Latite.dll">
+                                    href="jiayi://addmod/https://github.com/Imrglop/Latite-Releases/releases/latest/download/Latite.dll">
                                     <strong>Jiayi Launcher Import</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                                 <br>
