--- a/index.html
+++ b/index.html
@@ -148,9 +148,7 @@
                     data-aos-anchor="#trigger">
                     <div class="desc3">
                         <p class="h1">Plugins</p>
-                        <p class="p1">Create or get custom mods and commands using our API built on JavaScript and
-                            TypeScript.
-                        </p>
+                        <p class="p1">Add community made plugins or make your own using our API based on JavaScript/TypeScript!</p>
                         <div class="sdocs-container">
                             <a href="https://latitescripting.github.io" target="_blank" class="sdocs">See Docs<i
                                     class="fa-solid fa-arrow-right"></i></a>
@@ -168,7 +166,7 @@
                         <p class="h1">Customization</p>
                         <p class="p1">Customize the accent color of the client and most of the mods to your
                             likings! You can modify color,
-                            position of modules, size, keybinds, and so much more.
+                            position of modules, size, keybinds, font, and so much more.
                         </p>
                     </div>
                 </div>
