--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <a onclick="toggleLicense()">License</a>
                 <a href="#plugin-anchor">Plugins</a>
                 <a href="https://discord.gg/GpV3w5tyBs" target="_blank">Discord</a>
-                <a href="https://github.com/Imrglop/Latite-Releases" target="_blank">Github</a>
+                <a href="https://github.com/Imrglop/Latite-Releases" target="_blank">GitHub</a>
             </ul>
         </nav>
     </div>
@@ -234,6 +234,24 @@
                         </div>
                         <a class="plugin-link"
                             value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/MentionChatPing&filename=MentionChatPing">
+                            <button class="plugin-download">
+                                <img src="sources/download-plugin.svg">
+                            </button>
+                        </a>
+                    </div>
+
+                    <div class="plugin-item">
+                        <div class="plugin-text">
+                            <div class="plugin-header">
+                                <h2>KillNotif</h2>
+                                <p>By Plextora</p>
+                                <div class="new-plugin">NEW</div>
+                            </div>
+                            <div class="plugin-line"></div>
+                            <p class="plugin-description">Plays a sound whenever you kill someone on supported servers</p>
+                        </div>
+                        <a class="plugin-link"
+                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/KillNotif&filename=KillNotif">
                             <button class="plugin-download">
                                 <img src="sources/download-plugin.svg">
                             </button>
