--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <a href="#faq">FAQ</a>
                 <a onclick="toggleBeta()">Beta</a>
                 <a onclick="toggleLicense()">License</a>
-                <a href="#plugin-anchor">Plugins</a>
+                <a href="#plugins">Plugins</a>
                 <a href="https://discord.gg/GpV3w5tyBs" target="_blank">Discord</a>
                 <a href="https://github.com/Imrglop/Latite-Releases" target="_blank">GitHub</a>
             </ul>
@@ -94,7 +94,7 @@
             <p class="desctext">A Legitimate DLL Client For Minecraft Windows 10/11 Edition</p>
         </div>
         <div class="buttonbox">
-            <button class="button" onclick="toggleAlertDownlaodButton(); toggleDownload();">Download&nbsp;V2&nbsp;<i class="fa-solid fa-download"></i></button>
+            <button class="button" onclick="toggleAlertDownlaodButton(); toggleDownload();">Download&nbsp;<strong>V2</strong>&nbsp;<i class="fa-solid fa-download"></i></button>
             <form action="https://discord.gg/GpV3w5tyBs" target="_blank">
                 <button class="button-discord" href='https://discord.gg/GpV3w5tyBs' target="_blank">Discord&nbsp;<i
                         class="fa-brands fa-discord"></i></button>
@@ -215,7 +215,7 @@
             </video>
         </section>
 
-        <section class="plugin-main-container" id="plugin-anchor">
+        <section class="plugin-main-container" id="plugins">
             <p class="section-header" style="margin-top: 9rem;" data-aos="fade" data-aos-easing="ease-in-out" id="trigger10">
                 Community-made <span class="text-gradient">Plugins</span>
             </p>
@@ -293,199 +293,10 @@
                             </button>
                         </a>
                     </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>BedwarsStats</h2>
-                                <p>By Jax</p>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Shows you the top 3 players in your game sorted by k/d</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/BedwarsStats&filename=BedwarsStats">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>EventLogger</h2>
-                                <p>By 1unar_eclipse</p>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Logs details for every event. Yes, all of them</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/EventLogger&filename=EventLogger">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>Playtime</h2>
-                                <p>By Jax</p>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Tracks your session and overall playtime and displays it on
-                                the screen</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/Playtime&filename=Playtime">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>StructureScanner</h2>
-                                <p>By raspberryepicly</p>
-                                <div class="new-plugin">NEW</div>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Scans and lists blocks/items used inside a pre-determined box. Useful for getting the list for a farm/structure</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/StructureScanner&filename=StructureScanner">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>Timestamps</h2>
-                                <p>By raspberryepicly</p>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Adds Timetamps to messages in chat. might conflict with other plugins that modify chat messages</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/Timestamps&filename=Timestamps">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>DoubleClickPrevent</h2>
-                                <p>By 1unar_eclipse</p>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Adds artificial debounce time to prevent double (and further) clicks</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/DoubleClickPrevent&filename=DoubleClickPrevent">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>Slimey</h2>
-                                <p>By raspberryepicly</p>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Shows slime chunks in the world, requires Chunk Borders module to be enabled</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/Slimey&filename=Slimey">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>SpawnSphere</h2>
-                                <p>By raspberryepicly</p>
-                                <div class="new-plugin">NEW</div>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Shows mob spawn spheres</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/SpawnSphere&filename=SpawnSphere">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>REPL</h2>
-                                <p>By JayRSky</p>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Run Javascript code in game!</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/REPL&filename=REPL">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>CustomText</h2>
-                                <p>By xyrelium</p>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">Displays whatever you want on your HUD</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/CustomText&filename=CustomText">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="plugin-item">
-                        <div class="plugin-text">
-                            <div class="plugin-header">
-                                <h2>ColonThreeModule</h2>
-                                <p>By 1unar_eclipse</p>
-                            </div>
-                            <div class="plugin-line"></div>
-                            <p class="plugin-description">:3</p>
-                        </div>
-                        <a class="plugin-link"
-                            value="https://download-directory.github.io?url=https://github.com/LatiteScripting/Scripts/tree/master/Plugins/ColonThreeModule&filename=ColonThreeModule">
-                            <button class="plugin-download">
-                                <img src="sources/download-plugin.svg">
-                            </button>
-                        </a>
-                    </div>
                 </div>
+                <a class="viewmoreplugins" href="./plugins.html">View all<i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="plugin-link-info"><a href="https://latitescripting.github.io">Plugin Documentation</a> &bull; <a href="https://github.com/LatiteScripting/">Plugin Repository</a> &bull; <a href="#plugin-faq">Plugin FAQ</a></div>
+            <div class="plugin-link-info"><a href="https://latitescripting.github.io">Plugin Documentation</a> &bull; <a href="https://github.com/LatiteScripting/Scripts">Plugin Repository</a> &bull; <a href="#plugin-faq">Plugin FAQ</a></div>
         </section>
 
         <section class="launcher-container">
@@ -570,7 +381,7 @@
                             <li><strong>Latite Injector</strong> - this is the option most people choose, it's the
                                 default way to inject the client.</li>
                             <li><strong>Latite Minimal</strong> - This is a simpler version of the main injector for
-                                users encountering antivirus issues or users in India as github is blocked in that
+                                users encountering antivirus issues or users in India as GitHub is blocked in that
                                 country and therefore only this version of the injector will work for them.</li>
                             <li><strong>DLL Download</strong> - This is the client itself, only download this if you
                                 want to use it with other injectors (no you will not be able to use the client by
@@ -1128,7 +939,7 @@
                             <ul class="faqlist">
                                 <li>Launch Minecraft</li>
                                 <li>Make sure you have Latite Client injected</li>
-                                <li>Go to the official Latite Client <a class="links" href="#plugin-anchor">plugins list</a></li>
+                                <li>Go to the official Latite Client <a class="links" href="./plugins.html" target="_blank">Plugins List&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
                                 <li>Find any plugin you wish to install</li>
                                 <li>Type <code>.plugin install [plugin name]</code> in Minecraft chat</li>
                                 <li>Type <code>.plugin load [plugin name]</code> in Minecraft chat</li>
@@ -1161,7 +972,7 @@
                         Links to help you:
                         <ul class="faqlist">
                             <li><a class="links" href="https://latitescripting.github.io" target="_blank">Documentation</a></li>
-                            <li><a class="links" href="https://github.com/LatiteScripting/" target="_blank">Github Repository</a></li>
+                            <li><a class="links" href="https://github.com/LatiteScripting/" target="_blank">GitHub Repository</a></li>
                         </ul>
                     </div>
                 </div>
