plugins page refinement

--- a/plugins.html
+++ b/plugins.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content=" Latite Client, Latite, Latite Client Download, Latite Client, Motion Blur Minecraft Bedrock">
+    <meta name="author" content="Latite Client">
+    <meta property="twitter:title" content="Latite Client Plugins">
+    <meta property="og:title" content="Latite Client Plugins">
+    <meta property="og:type" content="website">
+    <meta name="theme-color" content="#4D57B2">
+    <meta property="og:description"
+        content="This is the page with all the verified plugins for Latite Client. Add extra modules into your game - made by our community!">
+    <meta name="description"
+        content="Latite Client. A Legitimate Client For Minecraft Windows 10/11 Edition. It features a clean UI, and 30+ mods, like Motion Blur, Keystrokes, Zoom, and more!">
+    <meta property="og:image"
+        content="https://cdn.discordapp.com/attachments/1059373077005336656/1059373077835812944/latite-1.png?ex=65c08e8f&is=65ae198f&hm=2071a81318b56e3cf2958b8ca44ddade4599ca10117658f2192e79db8e2af404&">
     <title>Plugins - Latite Client</title>
     <link rel="icon" type="image/png" href="sources/favicon.png">
     <link rel="stylesheet" href="plugins-src/style.css">
     <link rel="stylesheet" href="sources/aos_lib.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body data-aos="fade" data-aos-easing="ease-in-out">
     <div class="plugin-page-header">
-        <h1>Latite Client Plugins List</h1>
+        <h1>Latite Client Plugins</h1>
         <div class="searchbox">
             <i class="fa-solid fa-magnifying-glass"></i>
             <input id="searchbar" onkeyup="searchPlugin()" placeholder="Search Plugins">
         </div>
-        <div class="plugin-link-info"><a href="./">Home</a> &bull; <a href="https://latitescripting.github.io">Plugin Documentation</a> &bull; <a href="https://github.com/LatiteScripting/Scripts">Plugin Repository</a> &bull; <a href="./#plugin-faq">Plugin FAQ</a></div>
+        <div class="plugin-link-info"><a href="./">Home</a> &bull; <a href="https://latitescripting.github.io">Plugin
+                Documentation</a> &bull; <a href="https://github.com/LatiteScripting/Scripts">Plugin Repository</a>
+            &bull; <a href="./#plugin-faq">Plugin FAQ</a></div>
         <div class="line"></div>
     </div>
     <div class="plugin-container">
@@ -35,4 +53,5 @@
         once: true,
     });
 </script>
+
 </html>
