consistency fixes + attempt to remove .html in urls

--- a/index.html
+++ b/index.html
@@ -158,11 +158,10 @@
                         <div class="sdocs-container">
                             <a href="https://latitescripting.github.io" target="_blank" class="sdocs">See Docs<i
                                     class="fa-solid fa-arrow-right"></i></a>
-                            <a href="https://github.com/LatiteScripting/Scripts" target="_blank" class="sdocs">Plugins<i
+                            <a href="./plugins/" class="sdocs">Plugins<i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-                    <!-- <img src="./sources/plugins.webp" alt="Image of a script" loading="lazy" class="plugin-img"> -->
                     <div class="plugin-img"></div>
                 </div>
                 <div class="item item4" data-aos="fade-down" data-aos-easing="ease-out" data-aos-delay="500"
@@ -294,9 +293,9 @@
                         </a>
                     </div>
                 </div>
-                <a class="viewmoreplugins" href="./plugins.html">View all<i class="fa-solid fa-arrow-right"></i></a>
+                <a class="viewmoreplugins" href="./plugins/">View all<i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="plugin-link-info"><a href="https://latitescripting.github.io">Plugin Documentation</a> &bull; <a href="https://github.com/LatiteScripting/Scripts">Plugin Repository</a> &bull; <a href="#plugin-faq">Plugin FAQ</a></div>
+            <div class="plugin-link-info"><a href="https://latitescripting.github.io" target="_blank">Plugin Documentation</a> &bull; <a href="https://github.com/LatiteScripting/Scripts" target="_blank">Plugin Repository</a> &bull; <a href="#plugin-faq">Plugin FAQ</a></div>
         </section>
 
         <section class="launcher-container">
