--- a/plugins/index.html
+++ b/plugins/index.html
@@ -20,8 +20,8 @@
         content="https://cdn.discordapp.com/attachments/1059373077005336656/1059373077835812944/latite-1.png?ex=65c08e8f&is=65ae198f&hm=2071a81318b56e3cf2958b8ca44ddade4599ca10117658f2192e79db8e2af404&">
     <title>Plugins - Latite Client</title>
     <link rel="icon" type="image/png" href="sources/favicon.png">
-    <link rel="stylesheet" href="plugins-src/style.css">
-    <link rel="stylesheet" href="sources/aos_lib.css" />
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../sources/aos_lib.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw=="
@@ -35,16 +35,16 @@
             <i class="fa-solid fa-magnifying-glass"></i>
             <input id="searchbar" onkeyup="searchPlugin()" placeholder="Search Plugins">
         </div>
-        <div class="plugin-link-info"><a href="./">Home</a> &bull; <a href="https://latitescripting.github.io">Plugin
-                Documentation</a> &bull; <a href="https://github.com/LatiteScripting/Scripts">Plugin Repository</a>
-            &bull; <a href="./#plugin-faq">Plugin FAQ</a></div>
+        <div class="plugin-link-info"><a href=".././">Home</a> &bull; <a href="https://latitescripting.github.io" target="_blank">Plugin
+                Documentation</a> &bull; <a href="https://github.com/LatiteScripting/Scripts" target="_blank">Plugin Repository</a>
+            &bull; <a href=".././#plugin-faq">Plugin FAQ</a></div>
         <div class="line"></div>
     </div>
     <div class="plugin-container">
         <div id="plugin-list"></div>
     </div>
 </body>
-<script src="plugins-src/app.js"></script>
+<script src="./app.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
     AOS.init({
