github links faq

--- a/index.html
+++ b/index.html
@@ -894,6 +894,22 @@
 
                 <div class="question">
                     <button class="faqbutton">
+                        <span><strong>23. </strong>Latite Client GitHub Links</span>
+                        <i class="fas fa-chevron-down d-arrow"></i>
+                    </button>
+                    <div id="faqp">
+                        Here are all the GitHub Links:
+                        <ul class="faqlist">
+                            <li><a href="https://github.com/Plextora/LatiteInjector" class="links" target="_blank">Latite Client Launcher&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                            <li><a href="https://github.com/LatiteScripting" class="links" target="_blank">Latite Client Plugins Repositories&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                            <li><a href="https://github.com/Imrglop/Latite-Releases" class="links" target="_blank">Latite Client Releases&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                            <li><a href="https://github.com/LatiteClient/latiteclient.github.io" class="links" target="_blank">Latite Client Website&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="question">
+                    <button class="faqbutton">
                         <span><strong>23. </strong>Latite Social Media</span>
                         <i class="fas fa-chevron-down d-arrow"></i>
                     </button>
@@ -983,7 +999,7 @@
 
     <footer>
         <div class="footer-bottom">
-            <p>Latite Client. Website designed and developed by <strong>CreativeMC</strong></p>
+            <p>Latite Client. Website designed and developed by <strong>CreativeMC</strong>.</p>
             <p class="credlink" onclick="toggleCredits()">Credits</p>
         </div>
     </footer>
