--- a/discord/index.html
+++ b/discord/index.html
@@ -11,9 +11,9 @@
     <meta property="og:title" content="Latite Client Discord">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#4D57B2">
-    <meta property="og:description" content="Join the Latite Client Discord Server with 25+ members! Ask for help, see announcements, or have a chat with our community!">
+    <meta property="og:description" content="Join the Latite Client Discord Server with 25k members and counting! Ask for help, see announcements, or have a chat with our community!">
     <meta name="description"
-        content="Join the Latite Client Discord Server with 25+ members! Ask for help, see announcements, or have a chat with our community!">
+        content="Join the Latite Client Discord Server with 25k members and counting! Ask for help, see announcements, or have a chat with our community!">
     <meta property="og:image"
         content="https://cdn.discordapp.com/attachments/1059373077005336656/1059373077835812944/latite-1.png?ex=65c08e8f&is=65ae198f&hm=2071a81318b56e3cf2958b8ca44ddade4599ca10117658f2192e79db8e2af404&">
     <title>Latite Client Discord</title>
