--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                             <ul class="faqlist">
                                 <li>Launch Minecraft</li>
                                 <li>Make sure you have Latite Client injected</li>
-                                <li>Go to the official Latite Client <a class="links" href="./plugins.html" target="_blank">Plugins List&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                                <li>Go to the official Latite Client <a class="links" href="./plugins/" target="_blank">Plugins List&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
                                 <li>Find any plugin you wish to install</li>
                                 <li>Type <code>.plugin install [plugin name]</code> in Minecraft chat</li>
                                 <li>Type <code>.plugin load [plugin name]</code> in Minecraft chat</li>
