--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
                     It appears that you are on an unsupported device. Latite Client only supports
                     a 64-bit Windows OS and a x64-based processor.
                     <br><br>
-                    If you want a client for Andriod, go check out <span onclick="closeAlerts(), closeDownload()"><a
+                    If you want a client for Android, go check out <span onclick="closeAlerts(), closeDownload()"><a
                             href="#atlas" style="color: #fff; text-decoration: underline;">Atlas Client</a></span>!
                     <br><br>
                     If you think this detection is false,
